--- a/turma.html
+++ b/turma.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/paginas.css">
-    <title>Cadastrar Autor</title>
+    <title>Turma</title>
 </head>
 <body>
-    <h1>Cadastrar Autor</h1>
-    <a href="index.html">Voltar!</a>
+    <h1>Cadastrar Turma</h1>
+    <a href='index.html'>Voltar</a>
 </body>
 </html>
