--- a/aluno.html
+++ b/aluno.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico">
+    <link rel="stylesheet" href="estilos/paginas.css">
+
     <title>Aluno</title>
 
 </head>
 <body>
-    cadastrar aluno
+    <h1>cadastrar aluno</h1>
+    <a href="index.html">Voltar!</a>
 </body>
 </html>
