--- a/categoria.html
+++ b/categoria.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/paginas.css">
-    <title>Cadastrar Autor</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <title>Categoria</title>
 </head>
 <body>
-    <h1>Cadastrar Autor</h1>
+    
+    <h1>Cadastrar categoria</h1>
     <a href="index.html">Voltar!</a>
+
 </body>
 </html>
+
