--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ body nav a {
     margin: 2%;
     font-weight: bolder;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   
-    
-}
+ }
 nav {
+    margin-top: 0%;
     padding-top: 2%;
     padding-bottom: 2%;
     padding-left: 1%;
     background-color: black;
+    border-radius: 0px 0px 10px 10px;
 }
 body h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -42,7 +42,7 @@ body h3 {
 .button {
   background-color: #554903; 
   border: none;
-  color: rgb(22, 15, 1);
+  color: rgb(59, 41, 4);
   padding: 20px;
   text-align: center;
   text-decoration: none;
@@ -52,9 +52,10 @@ body h3 {
   margin: auto;
   text-shadow: 3px 3px 5px whitesmoke;
   font-weight: bolder;
-}
+  }
 section#botoes a {
     text-decoration: none;
+    color: #2b2502;
 }
 .button1 {
     border-radius: 12px 0px 12px 0px;
@@ -129,7 +130,36 @@ section#botoes a {
     justify-content: center;
     align-items: center;
 }
-
+.button8 {
+    border-radius: 12px 0px 12px 0px;
+    margin-top: 5px;
+    margin-bottom: 1%;
+    width: 60vw;
+    height: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button9 {
+    border-radius: 12px 0px 12px 0px;
+    margin-top: 5px;
+    margin-bottom: 1%;
+    width: 60vw;
+    height: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button10 {
+    border-radius: 12px 0px 12px 0px;
+    margin-top: 5px;
+    margin-bottom: 1%;
+    width: 60vw;
+    height: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
     </style>
 </head>
 <body>
@@ -143,8 +173,8 @@ section#botoes a {
 </div>
 
     <nav>
-        <a href="aluno.html">Home</a>
-        <a href="autor.html">Editar</a>
+        <a href="index.html">Home</a>
+        <a href="index.html">Editar</a>
         <a href="#">Relatório</a>
         <a href="#">SAIR</a>
         </nav>
@@ -153,24 +183,38 @@ section#botoes a {
 <h3>Cadastrar</h3>
 
 <section id="botoes">
-    
-   
-    <a href='aluno.html' target="_blank">Aluno
-    </a>
-   
     <button class="button button1">
-        <a href="aluno.html" target="_blank">Aluno
+        <a href="aluno.html" target="_self">Aluno
         </a>
     </button>
     <button class="button button2">
     <a href='autor.html' target="_self">Autor</a>
     </button>
-    <a href='#'></a><button class="button button3">Prateleira</button></a>
-    <a href='#'></a><button class="button button4">Editora</button>
-  </a>  <a href='#'></a><button class="button button5">Funcionário</button></a>
-    <a href='#'></a><button class="button button6">Livro</button>
-    </a><a href='#'></a><button class="button button7">Turma</button>
-    </a><a href='#'></a><button class="button button7">Empréstimo</button></a>
+    <button class="button button3">
+    <a href='categoria.html' target="_self">Categoria</a>
+    </button>
+    <button class="button button4">
+        <a href='editora.html' target="_self">Editora</a>
+    </button>
+    <button class="button button5">
+        <a href="funcionarios.html" target="_self">Funcionário</a>
+    </button>
+    <button class="button button6">
+        <a href='livro.html' target="_self">Livro</a>
+    </button>
+    <button class="button button7">
+        <a href='turma.html' target="_self">Turma</a>
+    </button>
+    <button class="button button8">
+    <a href='emprestimo.html' target="_self">Empréstimo</a>
+    </button>
+    <button class="button button9">
+        <a href='devolucao.html' target="_self">Devolução</a>
+    </button>
+    <button class="button button10">
+        <a href='usuarios.html' target="_self">Usuários</a>
+    </button>
 </section>
 </body>
 </html>
+
