--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <title>Biblioteca Cleide Rocha</title>
     <link rel="shortcut icon" href="imagens/favicon.ico">
     <style>
-body background-image {
+body {
+    background-image: url('imagens/logo-biblioteca.jpg');
+    background-color: rgba(255,255,255,0.7);
+    background-blend-mode: lighten; 
+    background-size: cover;
+   background-repeat: no-repeat;      
+    background-position: center;
+background-position: inherit;    }
+
+    background-image {
     opacity: 0.3;
     position: absolute;
     background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+    
    
 }
 body nav a {
@@ -50,8 +58,9 @@ body h3 {
   font-size: 16px;
   cursor: pointer;
   margin: auto;
-  text-shadow: 3px 3px 5px whitesmoke;
+  text-shadow: -1px 1px 5px whitesmoke;
   font-weight: bolder;
+  box-shadow: -2px 2px 8px rgba(0, 0, 0, 0.767);
   }
 section#botoes a {
     text-decoration: none;
