--- a/autor.html
+++ b/autor.html
@@ -7,7 +7,13 @@
     <title>Cadastrar Autor</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="index.html">Editar</a>
+        <a href="#">Relatório</a>
+        <a href="#">SAIR</a>
+    </nav>
     <h1>Cadastrar Autor</h1>
-    <a href="index.html">Voltar!</a>
+    
 </body>
 </html>
