--- a/categoria.html
+++ b/categoria.html
@@ -8,10 +8,14 @@
     <title>Categoria</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="index.html">Editar</a>
+        <a href="#">Relatório</a>
+        <a href="#">SAIR</a>
+    </nav>
     
     <h1>Cadastrar categoria</h1>
-    <a href="index.html">Voltar!</a>
-
 </body>
 </html>
 
