--- a/aluno.html
+++ b/aluno.html
@@ -10,7 +10,12 @@
 
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="index.html">Editar</a>
+        <a href="#">Relatório</a>
+        <a href="#">SAIR</a>
+    </nav>
     <h1>cadastrar aluno</h1>
-    <a href="index.html">Voltar!</a>
 </body>
 </html>
