--- a/editora.html
+++ b/editora.html
@@ -8,7 +8,12 @@
     <title>Editora</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="index.html">Editar</a>
+        <a href="#">Relatório</a>
+        <a href="#">SAIR</a>
+    </nav>
     <h1>Cadastrar Editora</h1>
-    <a href="index.html">Voltar!</a>
 </body>
 </html>
