--- a/turma.html
+++ b/turma.html
@@ -8,7 +8,12 @@
     <title>Turma</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="index.html">Editar</a>
+        <a href="#">Relatório</a>
+        <a href="#">SAIR</a>
+    </nav>
     <h1>Cadastrar Turma</h1>
-    <a href='index.html'>Voltar</a>
 </body>
 </html>
