--- a/aluno.html
+++ b/aluno.html
@@ -17,5 +17,9 @@
         <a href="#">SAIR</a>
     </nav>
     <h1>cadastrar aluno</h1>
+    <footer>
+        <p>Desenvolvido por <strong>Gilvane Caires!</strong></p>
+    </footer>
 </body>
+
 </html>
