--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@ body {
     background-image: url('imagens/logo-biblioteca.jpg');
     background-color: rgba(255,255,255,0.7);
     background-blend-mode: lighten; 
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;      
     background-position: center;
     background-position: inherit;
     background-attachment: fixed;
+    background-size: 600px 600px;
+    background-position: center;
+}
+body image{
+    width: 20px;
 }
 body nav a {
     text-decoration: none;
