--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@ body {
     background-position: center;
     background-position: inherit;
     background-attachment: fixed;
-    background-size: 600px 600px;
+    background-size: 95% 95%;
     background-position: center;
-}
-body image{
-    width: 20px;
 }
 body nav a {
     text-decoration: none;
