--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
     background-position: center;
     background-position: inherit;
     background-attachment: fixed;
-    background-size: 95% 95%;
+    background-size: 95%;
     background-position: center;
 }
 body nav a {
