--- a/categoria.html
+++ b/categoria.html
@@ -14,8 +14,21 @@
         <a href="#">Relatório</a>
         <a href="#">SAIR</a>
     </nav>
-    
+    <section id="espaço">
     <h1>Cadastrar categoria</h1>
+    <form action="#" method="post" autocomplete="on">
+        <fieldset>
+            <legend>Cadastrar categoria do livro</legend>
+            <p>
+                <label for="inome">Categoria do livro</label>
+                <input type="text" name="nome" id="inome" minlength="5" maxlength="40" required placeholder="Romance...">
+            </p>
+            </fieldset>
+    </form>
+    </section>
+    <footer>
+        <p>Desenvolvido por <strong>Gilvane Caires!</strong></p>
+    </footer>
 </body>
 </html>
 
