--- a/autor.html
+++ b/autor.html
@@ -14,6 +14,20 @@
         <a href="#">SAIR</a>
     </nav>
     <h1>Cadastrar Autor</h1>
-    
+    <form action="#" method="post" autocomplete="on">
+        <fieldset>
+            <legend>Dados do autor</legend>
+            <p>
+                <label for="inome">Nome do Autor</label>
+                <input type="text" name="nome" id="inome" minlength="5" maxlength="40" required>
+            </p>
+            
+        </fieldset> 
+        <p><input id="val" type="submit" value="Enviar">
+        <input id="val" type="reset" value="Limpar"></p>
+    </form>
+    <footer>
+        <p>Desenvolvido por <strong>Gilvane Caires!</strong></p>
+    </footer>
 </body>
 </html>
