--- a/aluno.html
+++ b/aluno.html
@@ -15,6 +15,7 @@
         <a href="#">Relatório</a>
         <a href="#">SAIR</a>
     </nav>
+    <section id="espaço">
     <h1>Cadastrar aluno</h1>
    
     <form action="#" method="post" autocomplete="on">
@@ -29,10 +30,11 @@
             <p>
                 <label for="iturno">Turno</label>
                 <input type="text" name="turno" id="iturno" required placeholder="Vespertino ou Matutino" >
-        </fieldset> <!-- "\(" abre parênteses +  "d{2}" 2 dígitos + ")\" fecha parênteses. Estudar sobre expressões regulares RegGex (começa com "^" e termina com "$")-->
+        </fieldset> 
         <p><input id="val" type="submit" value="Enviar">
         <input id="val" type="reset" value="Limpar"></p>
     </form>
+    </section>
     <footer>
         <p>Desenvolvido por <strong>Gilvane Caires!</strong></p>
     </footer>
