--- a/autor.html
+++ b/autor.html
@@ -13,7 +13,8 @@
         <a href="#">Relatório</a>
         <a href="#">SAIR</a>
     </nav>
-    <h1>Cadastrar Autor</h1>
+       <section id="espaço"> 
+        <h1>Cadastrar Autor</h1>
     <form action="#" method="post" autocomplete="on">
         <fieldset>
             <legend>Dados do autor</legend>
@@ -26,6 +27,7 @@
         <p><input id="val" type="submit" value="Enviar">
         <input id="val" type="reset" value="Limpar"></p>
     </form>
+    </section>
     <footer>
         <p>Desenvolvido por <strong>Gilvane Caires!</strong></p>
     </footer>
