--- a/devolucao.html
+++ b/devolucao.html
@@ -14,6 +14,20 @@
         <a href="#">Relatório</a>
         <a href="#">SAIR</a>
     </nav>
+    <section id="espaço">
     <h1>Cadastrar Devolução</h1>
+    <form action="#" method="post" autocomplete="on">
+        <fieldset>
+            <legend>Cadastrar categoria do livro</legend>
+            <p>
+                <label for="inome">Data da devolução</label>
+                <input type="text" name="nome" id="inome" minlength="5" maxlength="40" required placeholder="date">
+            </p>
+            </fieldset>
+    </form>
+    </section>
+    <footer>
+        <p>Desenvolvido por <strong>Gilvane Caires!</strong></p>
+    </footer>
 </body>
 </html>
