--- a/editora.html
+++ b/editora.html
@@ -14,6 +14,21 @@
         <a href="#">Relatório</a>
         <a href="#">SAIR</a>
     </nav>
+    <section id="espaço">
+        <h1>Cadastrar Editora</h1>
+        <form action="#" method="post" autocomplete="on">
+            <fieldset>
+                <legend>Cadastrar editora</legend>
+                <p>
+                    <label for="inome">Editora</label>
+                    <input type="text" name="nome" id="inome" minlength="5" maxlength="40" required placeholder="editora">
+                </p>
+                </fieldset>
+        </form>
+        </section>
+        <footer>
+            <p>Desenvolvido por <strong>Gilvane Caires!</strong></p>
+        </footer>
     <h1>Cadastrar Editora</h1>
 </body>
 </html>
