--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="imagens/favicon.ico">
     <style>
 body {
+    margin-top: 0%;
     background-image: url('imagens/logo-biblioteca.jpg');
     background-color: rgba(255,255,255,0.7);
     background-blend-mode: lighten; 
@@ -19,6 +20,7 @@ body {
     background-position: center;
 }
 body nav a {
+    
     text-decoration: none;
     color: white;
     margin: 2%;
@@ -36,6 +38,8 @@ nav {
     border-radius: 0px 0px 10px 10px;
 }
 body h1 {
+    
+    paddmargin: 2% 0% 0% 0%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     margin: 6% 0% 0% 0%;
