--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@ body h3 {
   font-weight: bolder;
   box-shadow: -2px 2px 8px rgba(0, 0, 0, 0.767);
   }
+section#botoes{
+    height: 72vh;
+}
 section#botoes a {
     text-decoration: none;
     color: #2b2502;
