--- a/index.html
+++ b/index.html
@@ -6,23 +6,7 @@
     <title>Biblioteca Cleide Rocha</title>
     <link rel="shortcut icon" href="imagens/favicon.ico">
     <style>
-*{
-    box-sizing: border-box;
-}
-.bg {
-    min-height: 100vh;
-    justify-content: initial;
-    align-self: center;
-    position: relative;
-    display: flex;
-}
-.bg::before{
-    content: '';
-    background-image: url("imagens/logo-biblioteca1.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
+body{
     
 }
 body nav a {
