--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="shortcut icon" href="imagens/favicon.ico">
     <style>
 body{
-    
+    background-image: url("imagens/logo-biblioteca1.jpg"),
+    url("imagens/logo-biblioteca2.jpg"), url("imagens/logo-biblioteca3.png"), url("imagens/logo-biblioteca4.png");
+    background-position: top left, top right, bottom left, bottom right;
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+    background-blend-mode: lighten;
+    background-size: 45%;
+    background-color: rgba(240, 248, 255, 0.75);
 }
 body nav a {
     text-decoration: none;
@@ -190,7 +196,6 @@ footer strong {
     </style>
 </head>
 <body>
-    <div class="bg">
     <nav>
         <a href="index.html">Home</a>
         <a href="index.html">Editar</a>
@@ -235,7 +240,6 @@ footer strong {
         <a href='usuarios.html' target="_self">Usuários</a>
     </button>
 </section>
-</div>
 <footer>
     <p>Desenvolvido por <strong>Gilvane Caires!</strong></p>
 </footer>
