--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link rel="shortcut icon" href="imagens/favicon.ico">
     <style>
 body{
+    margin-top: 0%;
     background-image: url("imagens/logo-biblioteca1.jpg"),
-    url("imagens/logo-biblioteca2.jpg"), url("imagens/logo-biblioteca3.png"), url("imagens/logo-biblioteca4.png");
-    background-position: top left, top right, bottom left, bottom right;
-    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+    url("imagens/logo-biblioteca2.jpg"), url("imagens/logo-biblioteca3.png"), url("imagens/logo-biblioteca4.png"), url("imagens/logo-biblioteca5.png");
+    background-position: top left, top right, bottom left, bottom right, center center;
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
     background-blend-mode: lighten;
-    background-size: 45%;
+    background-size: 45vh;
     background-color: rgba(240, 248, 255, 0.75);
+    height: 90vh;
 }
+
 body nav a {
     text-decoration: none;
     color: white;
@@ -24,7 +27,7 @@ body nav a {
     text-shadow: -2px 2px 4px blanchedalmond;
  }
 nav {
-    height: 3vh;
+    height: 2.5vh;
     margin-top: 0%;
     padding-top: 2%;
     padding-bottom: 2%;
@@ -61,7 +64,7 @@ body h3 {
   }
 section#botoes{
        
-   height: 72vh;
+   height: 40vw;
     
     background-blend-mode: lighten; 
     background-repeat: no-repeat;      
