--- a/aluno.html
+++ b/aluno.html
@@ -31,8 +31,8 @@
                 <label for="iturno">Turno</label>
                 <input type="text" name="turno" id="iturno" required placeholder="Vespertino ou Matutino" >
         </fieldset> 
-        <p><input id="val" type="submit" value="Enviar">
-        <input id="val" type="reset" value="Limpar"></p>
+        <p><input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="submit" value="Enviar">
+        <input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="reset" value="Limpar"></p>
     </form>
     </section>
     <footer>
