--- a/autor.html
+++ b/autor.html
@@ -24,8 +24,8 @@
             </p>
             
         </fieldset> 
-        <p><input id="val" type="submit" value="Enviar">
-        <input id="val" type="reset" value="Limpar"></p>
+        <p><input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="submit" value="Enviar">
+            <input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="reset" value="Limpar"></p>
     </form>
     </section>
     <footer>
