--- a/categoria.html
+++ b/categoria.html
@@ -24,6 +24,8 @@
                 <input type="text" name="nome" id="inome" minlength="5" maxlength="40" required placeholder="Romance...">
             </p>
             </fieldset>
+            <p><input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="submit" value="Enviar">
+                <input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="reset" value="Limpar"></p>
     </form>
     </section>
     <footer>
