--- a/devolucao.html
+++ b/devolucao.html
@@ -24,9 +24,11 @@
                 <input type="text" name="nome" id="inome" minlength="5" maxlength="40" required placeholder="date">
             </p>
             </fieldset>
+            <p><input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="submit" value="Enviar">
+                <input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="reset" value="Limpar"></p>
     </form>
     </section>
-    <footer>
+footer>
         <p>Desenvolvido por <strong>Gilvane Caires!</strong></p>
     </footer>
 </body>
