--- a/funcionarios.html
+++ b/funcionarios.html
@@ -15,5 +15,20 @@
         <a href="#">SAIR</a>
     </nav>
     <h1>Cadastrar funcionários</h1>
+    <form action="#" method="post" autocomplete="on">
+        <fieldset>
+            <legend>Cadastrar editora</legend>
+            <p>
+                <label for="inome">Editora</label>
+                <input type="text" name="nome" id="inome" minlength="5" maxlength="40" required placeholder="editora">
+            </p>
+            </fieldset>
+            <p><input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="submit" value="Enviar">
+                <input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="reset" value="Limpar"></p>
+    </form>
+    </section>
+    <footer>
+        <p>Desenvolvido por <strong>Gilvane Caires!</strong></p>
+    </footer>
 </body>
 </html>
