--- a/aluno.html
+++ b/aluno.html
@@ -15,10 +15,10 @@
         <a href="#">Relatório</a>
         <a href="#">SAIR</a>
     </nav>
-    <section id="espaço">
+    <section id="espaco">
     <h1>Cadastrar aluno</h1>
    
-    <form action="#" method="post" autocomplete="on">
+    <form style="height: 500px;" action="#" method="post" autocomplete="on">
         <fieldset>
             <legend>Dados do aluno</legend>
             <p>
@@ -26,10 +26,10 @@
                 <input type="text" name="nome" id="inome" minlength="5" maxlength="40" required>
             </p>
             <p> <label for="iturma">Turma/Ano</label>
-                <input type="email" name="text" id="iturma" required placeholder="?Reg?202?" required> </p> 
+                <input type="email" name="text" id="iturma" required placeholder="1º Reg 3 2024..." required> </p> 
             <p>
                 <label for="iturno">Turno</label>
-                <input type="text" name="turno" id="iturno" required placeholder="Vespertino ou Matutino" >
+                <input type="text" name="turno" id="iturno" required placeholder="Matutino, Vespertino ou Noturno" >
         </fieldset> 
         <p><input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="submit" value="Enviar">
         <input style="border-radius: 0px 5px; box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.366);" id="val" type="reset" value="Limpar"></p>
