--- a/usuarios.html
+++ b/usuarios.html
@@ -14,6 +14,7 @@
         <a href="#">Relatório</a>
         <a href="#">SAIR</a>
     </nav>
+    <section id="espaço" >
     <h1>Cadastrar Usuários</h1>
     <form action="#" method="post" autocomplete="on">
         <fieldset>
