--- a/autor.html
+++ b/autor.html
@@ -13,7 +13,7 @@
         <a href="#">Relatório</a>
         <a href="#">SAIR</a>
     </nav>
-       <section id="espaço"> 
+       <section id="espaco"> 
         <h1>Cadastrar Autor</h1>
     <form action="#" method="post" autocomplete="on">
         <fieldset>
