--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
 body{
     margin-top: 0%;
-    background-image: url("imagens/logo-biblioteca1.jpg"),
-    url("imagens/logo-biblioteca2.jpg"), url("imagens/logo-biblioteca3.png"), url("imagens/logo-biblioteca4.png"), url("imagens/logo-biblioteca5.png");
+    background-image: url("imagens/logo-biblioteca1.png"),
+    url("imagens/logo-biblioteca2.png"), url("imagens/logo-biblioteca3.png"), url("imagens/logo-biblioteca4.png"), url("imagens/logo-biblioteca5.png");
     background-position: top left, top right, bottom left, bottom right, center center;
     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
     background-blend-mode: lighten;
