--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body{
     background-position: top left, top right, bottom left, bottom right, center center;
     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
     background-blend-mode: lighten;
-    background-size: 45vh;
+    background-size: 50vw;
     background-color: rgba(240, 248, 255, 0.75);
     height: auto;
 }
